--- a/css/main.css
+++ b/css/main.css
@@ -58,3 +58,27 @@ section {
     color: white;
     background-color: #364147;
 }
+
+.form-control {
+    border: solid, 1px, #a0a0a0;
+    display: block;
+    padding: 6px, 12px;
+    line-height: 1.4;
+}
+
+.text-light {
+    font-size: 30px;
+    color: #a0a0a0;
+
+}
+
+.text-secondary {
+    font-size: 30px;
+    color: #faa541;
+
+}
+
+.text-primary {
+    font-size: 16px;
+    color: #364147;
+}
