--- a/css/main.css
+++ b/css/main.css
@@ -60,9 +60,9 @@ section {
 }
 
 .form-control {
-    border: solid, 1px, #a0a0a0;
+    border: 1px solid #8598a2;
     display: block;
-    padding: 6px 12px;
+    padding: 6px, 12px;
     line-height: 1.4;
     color: #8598a2;
 }
