--- a/css/main.css
+++ b/css/main.css
@@ -60,11 +60,11 @@ section {
 }
 
 .form-control {
-    border: 1px solid #8598a2;
     display: block;
     padding: 6px 12px;
-    line-height: 1.4;
+    border: 1px solid #a0a0a0;
     color: #8598a2;
+    line-height: 1.4;
 }
 
 .text-light {
