--- a/css/main.css
+++ b/css/main.css
@@ -83,3 +83,36 @@ section {
     font-size: 16px;
     color: #364147;
 }
+
+.header-nav {
+    border: 1px solid #a0a0a0;
+
+}
+
+.brand {
+    width: 170px;
+    height: 85px;
+    margin-left: 15px;
+    margin-right: 60px;
+}
+
+.logo {
+    max-width: 100%;
+    height: auto;
+}
+
+.search-box {
+    width: 330px;
+    height: 30px;
+    padding: 6px 12px;
+    border: 1px solid #a0a0a0;
+}
+
+.search-button {
+    background-color: #a0a0a0;
+    color: white;
+    height: 30px;
+    width: 100px;
+    border: 0;
+    padding: 0;
+}
