--- a/css/main.css
+++ b/css/main.css
@@ -93,7 +93,7 @@ section {
 .brand {
     width: 170px;
     height: 85px;
-    margin-left: 15px;
+    margin-left: -15px;
     margin-right: 60px;
 }
 
@@ -117,3 +117,41 @@ section {
     border: 0;
     padding: 0;
 }
+
+.nav-list {
+    padding-left: 0;
+    width: 575px;
+    margin-top: 10px;
+}
+.nav-list li a {
+    font-size: 16px;
+    text-transform: uppercase;
+    font-weight: 700;
+    letter-spacing: 0.2px;
+}
+
+.profile {
+    margin-left: auto;
+}
+
+.account {
+    text-align: right;
+    padding: 15px;
+    color: #364147;
+    font-size: 18px;
+}
+
+.account a {
+    font-size: 14px;
+}
+
+.profile-pic {
+    height: 60px;
+    width: 60px;
+}
+
+.profile-pic img {
+    border-radius: 100px;
+    max-width: 100%;
+}
+
