--- a/css/main.css
+++ b/css/main.css
@@ -159,7 +159,7 @@ section {
     background-image: url('../img/hero.jpg');
     background-size: cover;
     height: 400px;
-    background-position: center;
+    background-position: center center;
     text-transform: uppercase;
 }
 
@@ -172,8 +172,8 @@ section {
     color: #faa541;
 }
 
-.hero h2,
-.hero h1 {
+.hero h1,
+.hero h2 {
     font-size: 63px;
     font-weight: 700;
     line-height: 0.9;
