--- a/css/main.css
+++ b/css/main.css
@@ -161,19 +161,19 @@ section {
     height: 400px;
     background-position: center center;
     text-transform: uppercase;
+    width: 100%;
 }
 
 .hero h1 {
     position: relative;
-    left: -30;
+    left: -30px;
 }
 
 .hero h2 {
     color: #faa541;
 }
 
-.hero h1,
-.hero h2 {
+.hero h1, .hero h2 {
     font-size: 63px;
     font-weight: 700;
     line-height: 0.9;
